--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+header{border-radius: 10px;}
+body{font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+
+}
 h1 {background-color:#A52A2A;
 font-family:Arial, Helvetica, sans-serif;
  }
 h2 {
     text-align:left;
-    border-bottom: 0.2em;
+    border-bottom: 1px solid;
     font-size: 2em;
 
 }
