--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 
-header{line-height: 55px;
+header{line-height: 80px;
     border-radius: 10px;
     background-color:#A52A2A;
     
 }
 header img{float: right;
     width: 180px;
-height: auto;}
+height: 200px;
+margin-top: -80px;
+margin-right: 20px;}
 
 body{font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
+    padding: 30px;
 
 }
 h1 {
 font-family:Arial, Helvetica, sans-serif;
+padding-left: 0.5em;
  }
 h2 {
     text-align:left;
@@ -27,6 +31,8 @@ h2 {
     text-align:center;
     background-color:#A52A2A;
     border-radius: 10px;
+    padding-top: 10px;
+    padding-bottom:10px;
 }
 #lastmod{
     font-weight: 400;
