--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ margin-right: 20px;}
 
 body{font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
-    padding: 30px;
+    margin-left:auto;
+    margin-right:auto;
+    max-width:800px;
 
 }
 h1 {
@@ -26,8 +28,7 @@ h2 {
 
 }
  footer{
-    flex-flow:row wrap;
-    height:80px;
+    height:60px;
     text-align:center;
     background-color:#A52A2A;
     border-radius: 10px;
