--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ header{line-height: 80px;
 }
 header img{float: right;
     width: 180px;
-height: 200px;
-margin-top: -80px;
-margin-right: 20px;}
+    height: 200px;
+    margin-top: -80px;
+    margin-right: 20px;}
 
 body{font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
@@ -35,8 +35,9 @@ h2 {
     padding-top: 10px;
     padding-bottom:10px;
 }
-#lastmod{
-    font-weight: 400;
-    color:lightskyblue;
-    font-size: 0.8rem;
+#Colmod{
+    color:whitesmoke;
+    }
+#modDate{
+    color:black;
 }
