--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,37 +1,38 @@
 
 header{line-height: 80px;
-    border-radius: 10px;
     background-color:#A52A2A;
     
 }
-header img{float: right;
+header img{
     width: 180px;
     height: 200px;
     margin-top: -80px;
-    margin-right: 20px;}
-
+    margin-right: 20px;
+    
+}
 body{font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
-    margin-left:auto;
-    margin-right:auto;
+    padding-left:20%;
+    padding-right:20%;
     max-width:800px;
+    
 
 }
 h1 {
-font-family:Arial, Helvetica, sans-serif;
-padding-left: 0.5em;
+font-family:'Yanone Kaffeesatz', sans-serif;
+font-size:1.5em;
+padding-left: 1.5em;
  }
 h2 {
     text-align:left;
     border-bottom: 1px solid;
-    font-size: 2em;
+    font-size: 1em;
 
 }
  footer{
     height:60px;
     text-align:center;
     background-color:#A52A2A;
-    border-radius: 10px;
     padding-top: 10px;
     padding-bottom:10px;
 }
