--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-
+* {margin:0; box-sizing: border-box;}
 header{line-height: 80px;
     background-color:#A52A2A;
     
@@ -25,7 +25,7 @@ padding-left: 1.5em;
  }
 h2 {
     text-align:left;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #bbb;
     font-size: 1em;
 
 }
