--- a/Lesson2/CSS/design.css
+++ b/Lesson2/CSS/design.css
@@ -3,45 +3,64 @@ body{font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     max-width:1200px;
     color: whitesmoke;
+    margin:0 auto;
 }
-h2 {
+main h2 {
     text-align:center;
-    font-size: 2em;
+    font-size: 2.5em;
     color:black;
     margin: 1em;
 }
 header, footer{
-    margin: 1.5em auto;
-    padding:1em;
+    margin:1.5em 0.5em;
     text-align: center;
+    padding:1em;
     background-color:#A52A2A;
     color: whitesmoke;
 }
 main{display:grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr;
     max-width: 1200px;
     margin:0 auto;
 
 }
 main section{
+    background-color: #F0E68C ;
+    text-align:center;
     margin: 0.5em;
 	padding: 0 1em;
-    background-color: #F0E68C ;
-    text-align:center;}
+    }
+
 section:nth-child(2) {
-    margin: 0.5rem;
     background: #87fff9;
+    margin: 0.5em;
+    
+}
+section:nth-child(3) {
+    background: #ffc787;
+    margin: 0.5em;
+    
 }
 main p{font-family: Arial, Helvetica, sans-serif;
+    text-align:justify;
+    color:black;
+    padding-top:0.5em;
+    padding-bottom: 0.5em;
+}
+
+
+header h1{
+    color: whitesmoke;
+    font-size:3.0em;
+    font-weight: bold;
+    }
+main h3{
+    margin: 30px 0;
+    font-size:1em;
     color:black;
 }
-#fix_p{padding:0.5em;}
-header h1{
-    font-size:2.5em;
-    font-weight: bold;
-    color: whitesmoke;}
-h3{font-size:1em;
-    font-weight: 300;
-    margin: 30px 0;
-    color:black;
+main img{
+    width: 350px;
+    height: auto;
+    
 }
