--- a/Lesson2/CSS/medium.css
+++ b/Lesson2/CSS/medium.css
@@ -1,9 +1,13 @@
 @media only screen and (min-width:32.5em){
 
 main{
-    grid-template-columns: 1fr 1fr;}
+    grid-template-columns: 1fr 1fr;
+    margin-right:0;
+    margin-left:0;
+    max-width: 90%;
+}
 
-header, footer{
+header, footer{margin:1.25em 0.5em;
     border-radius:10px;
 }
 header h1 {display:grid;
@@ -24,6 +28,8 @@ section:nth-child(3){
 
 main img{display:block;
     height:auto;
+    margin-left:auto;
+    margin-right:auto;
     border-radius:10px;
 }
 }
