--- a/CSS/middle.css
+++ b/CSS/middle.css
@@ -7,7 +7,10 @@
         
     }
     header,footer{border-radius:10px;
+        margin:0 auto;
     }
+    main{margin:0 auto;}
+
     header img{float: right;
         box-shadow: 0 0 30px #444;
         border-radius:10px;
