--- a/CSS/middle.css
+++ b/CSS/middle.css
@@ -14,7 +14,8 @@
     header img{float: right;
         box-shadow: 0 0 30px #444;
         border-radius:10px;
-        margin-top:-80px;
+        margin-top:-40px;
+        height:200px;
         
     }
 
