--- a/lesson3/CSS/large.css
+++ b/lesson3/CSS/large.css
@@ -1,8 +1,8 @@
 @media only screen and (min-width:60em){
  
 header,
-footer {
-    background-color:greenyellow;
+footer {margin:0.2em 0.2em;
+    
     }
 header h1{
     font-size:2.5em;
