--- a/lesson4/css/l4large.css
+++ b/lesson4/css/l4large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width:32.5){
+@media only screen and (min-width:32.5em){
     header h1{
         font-size:2.5em;  
     }
