--- a/lesson5/css/l5small.css
+++ b/lesson5/css/l5small.css
@@ -81,8 +81,7 @@ nav a.active{background-color:#22187f;
     margin:0 auto;
 }*/
 main p{
-    text-align:justify;
-    padding:1em;
+    padding:0.2em;
     font-size:0.9em;
 }
 
@@ -111,12 +110,17 @@ main h2{text-align:center;
     position:absolute;
     top: 10px;
     left:10px;
-    border:1px solid white;
-    text-align:justify;
-    background-color: #ffff80;opacity:0.5;
-    width:200px;
-    height:150px;
+    background-coloR:#ffff80;opacity:0.5;
+    text-align:left;
     font-size:0.8em;
+    box-shadow:0 0 30px #ffff80;
+    font-weight:100;
+    display:block;
+    padding:0.8em;
+
+}
+.weatherSum h3{
+    border-bottom:1px solid #000;
 }
 .contentarea{
     border:1px solid #bbb;
@@ -125,27 +129,36 @@ main h2{text-align:center;
     height:auto;
     background-color:#D3D3D3;
     margin-top:30px;
+    padding:10px;
 }
 .articleimg{
-    border:1px dotted #000;
     margin:10px auto;
     width:100%;
     height: auto;
 }
+.article-pic{
+    display:block;
+    box-shadow: 5px 5px 5px #000;
+}
 #articlecontent{
-    text-align:justify;
+    text-align:left;
+    padding:10px;
 }
 .contactarea{
-    border:1px dotted #000;
     width:100%;
     height:auto;
-    margin:5px auto;  
+    margin:10px auto;
+    padding:15px;  
 }
 .contact-info{
-    text-align: center;
+    text-align:center;
+    padding-top:25px;
+}
+.details{
+    text-align:center;
 }
 .presmap{
     width:100%;
     height:auto;
-    box-shadow:0px 0px 5px grey;
+    box-shadow:5px 5px 5px grey;
 }
