--- a/lesson5/css/l5large.css
+++ b/lesson5/css/l5large.css
@@ -29,22 +29,27 @@
         display:block;
         flex:1 1 100%;
     }
-    .contentarea{
-        height:200px;
+    /*css styling for the content*/
+    .weatherSum{color:white;
+        width:250px;
+    
     }
-    /*.articleimg img{
-        width:100px;
-        height:100px;
+    .contentarea{
+        height:auto;
+    }
+    .articleimg{
+        width:100%;
         float:right;
         box-shadow:5px 5px 5px grey;
         margin-top:-60px;
-    }*/
-    .article-pic{
-        float:right;
-        margin-top:-60px;
     }
+    /*.contentarea .article-pic{
+        float:right;
+        margin-top:-100px;
+    }*/
 
     .presmap{
         float: left;
+        border-radius: 10px;
     }
 }
