--- a/lesson5/css/l5large.css
+++ b/lesson5/css/l5large.css
@@ -1,53 +1,16 @@
-@media only screen and (min-width:32.5em){
-
-    main, footer{
-        max-width:1200PX;
-        margin:0 auto;
-    }
-   
-    header h1{
-        font-size:2.5em;  
-    }
-    .motto{
-        font-size:1.1em;
-        letter-spacing:2px;
-        margin-left:60px;
-    }
-    header img{
-        width:100%;
-    }
-    /*css styling of navigation bar for large windows*/
+@media only screen and (min-width:60em){
     
-    .navigationbar{
-        display:flex;
-        
-    }
-    .navigationbar li:first-child{
-        display:none;
-    }
-    .navigationbar li {
-        display:block;
-        flex:1 1 100%;
-    }
-    /*css styling for the hero image and weather summary content*/
-    .weatherSum{color:white;
-        width:250px;
+    .weatherSum{
+        font-size:1.2em;
+        width:300px;
+        height:80%;
+        padding:20px;
+        line-height:30px;
     
     }
-
-    .articleimg{
-        float:left;
-        margin-top:-60px;
-        width:300px;
-    }
-    .presmap{
-        float: left;
-        border-radius: 10px;
-        width:300px;
-    }
-
-    .contactarea{
-                    height: 300px;
- 
+    .forecast-area{
+        display:inline;
+        margin:auto;
+        justify-items: center;
     }
 }
