--- a/lesson5/css/l5small.css
+++ b/lesson5/css/l5small.css
@@ -89,7 +89,11 @@ main h2{text-align:center;
     font-size: 1.5em;
     color:#22187F;
     padding:25px;
-    
+    font-weight: 700;
+    text-shadow: 3px 3px 5px gray;
+}
+main h3{
+    color:#22187F;
 }
 
 .container1{
@@ -123,21 +127,61 @@ main h2{text-align:center;
 .weatherSum h3{
     border-bottom:1px solid #000;
 }
+.forecast-area{
+    display:none;
+}
+.fiveday{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    margin: auto;
+    box-shadow: 5px 5px 15px gray;
+    
+}
+.forecast-area h2{
+    display:block;
+    text-align: center;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.forecast{
+    flex: 1 1 100%;
+    text-align: center;
+    font-size: 1em;
+    
+    border-right:1px solid #000;
+}
+.weekday{
+    display: block;
+    background-color:#22187F;
+    color:white;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 1.5em;
+}
+.weather-data{
+    display:block;
+    font-weight: 600;
+}
 /*css for the article and the image*/
 .article-area{
     border:1px solid #bbb;
-    margin:0.3em auto;   
+    margin:10px auto;   
     background-color:#D3D3D3;
     margin-top:30px;
     padding:10px;
+}
+.article-holder{
     text-align:left;
+    padding-top:25px;
+
 }
 .articleimg{
     display:block;
     margin:auto;
     max-width:100%;
     height: auto;
-    box-shadow:5px 5px 5px grey;
+    box-shadow:5px 5px 5px #000;
 
 }
 /*css for the contact information*/
@@ -147,12 +191,6 @@ main h2{text-align:center;
     margin:10px auto;
     padding:15px;  
 }
-
-#article-holder{
-                text-align:center;
-                padding-top:25px;
-}
-
 .contact-info{
     text-align:center;
     padding-top:25px;
@@ -161,7 +199,9 @@ main h2{text-align:center;
     text-align:center;
 }
 .presmap{
-    width:100%;
-    height:auto;
-    box-shadow:5px 5px 5px grey;
+    display:none;
+}
+.social-icons{
+    align-items: center;
+    padding:60px;
 }
