--- a/lesson5/css/l5small.css
+++ b/lesson5/css/l5small.css
@@ -4,6 +4,12 @@ body{font-family:'Montserrat', sans-serif;
     font-size:16px;
    
 }
+#fridaybanner{
+    display:none;
+    background-color:#ba1309; 
+    line-height:25px;
+    font-size:20px;
+}
 header,
 footer {
     background-color:#00bfff;
