--- a/lesson5/css/l5middle.css
+++ b/lesson5/css/l5middle.css
@@ -61,6 +61,7 @@
         margin-top:60px;
     }
     #fridaybanner{
+        display:none;
         background-color:#ba1309; 
         line-height:25px;
         font-size:20px;
