--- a/CSS/small.css
+++ b/CSS/small.css
@@ -8,7 +8,7 @@ header img{
     height: auto;
      
 }
-body{font-family: Arial, Helvetica, sans-serif;
+body{font-family: 'Roboto', sans-serif;
     line-height:1.5em;
     font-size: 1em;
     height:100%; 
