--- a/lesson7/CSS/gallery-style.css
+++ b/lesson7/CSS/gallery-style.css
@@ -216,19 +216,30 @@ main h3{
 .img-gallery{
     display:grid;
     grid-template-columns: 1fr;
-    border:1px solid red;
     justify-content: center;
+    margin:20px;
 }
 .img-gallery figure img{
-    max-width:350px;
-    margin:0.5rem;
+    width:100%;
+    height:50%;
     border-radius:5px;
 }
 figcaption{
     font-size:smaller;
-    text-align:center;
+    background-color: #1e90ff;
+    line-height:30px;
 }
-.img-gallery figure img:hover{
+.img-gallery figure{
+    margin:0
+}
+.img-gallery figure:hover{
     box-shadow: 0 0 50px #333;
+}
+img[data-src] {
+    filter: blur(0.2em);
+  }
+img {
+  filter: blur(0em);
+  transition: filter 1s;
 }
 
