--- a/lesson7/CSS/gallery-style.css
+++ b/lesson7/CSS/gallery-style.css
@@ -220,8 +220,8 @@ main h3{
     margin:20px;
 }
 .img-gallery figure img{
-    width:100%;
-    height:50%;
+    width:300;
+    height:200;
     border-radius:5px;
 }
 figcaption{
