--- a/lesson7/CSS/gallery-style.css
+++ b/lesson7/CSS/gallery-style.css
@@ -213,24 +213,31 @@ main h3{
     font-size:20px;
 }
 /* CSS styling for the gallery page */
+#gallery{
+    text-align:center;
+    color:#22187F;
+    text-shadow:4px #333;
+
+}
 .img-gallery{
-    display:grid;
-    grid-template-columns: 1fr;
+    display: grid;
+    grid-auto-columns: 1fr;
     justify-content: center;
     margin:20px;
 }
 .img-gallery figure img{
-    width:300;
-    height:200;
-    border-radius:5px;
+    width:100%;
+    height:200px;
+    
+}
+
+.img-gallery figure{
+    margin:0.5em;
 }
 figcaption{
-    font-size:smaller;
-    background-color: #1e90ff;
+    font-size:1.2em;
     line-height:30px;
-}
-.img-gallery figure{
-    margin:0
+    padding-left:10px;
 }
 .img-gallery figure:hover{
     box-shadow: 0 0 50px #333;
