--- a/lesson7/CSS/l7large.css
+++ b/lesson7/CSS/l7large.css
@@ -16,4 +16,7 @@
     .img-gallery{
         grid-template-columns: 1fr 1fr 1fr; 
 }
+    .img-gallery figure:hover{
+        box-shadow: 0 0 50px #333;
+}
 }
