--- a/lesson7/CSS/gallery-style.css
+++ b/lesson7/CSS/gallery-style.css
@@ -76,11 +76,11 @@ nav a.active{background-color:#22187f;
 
 
 /*Main css styling here*/
-/*main {
+main {
     display:block;
-    max-width:780px;
+    max-width:1200px;
     margin:0 auto;
-}*/
+}
 main p{
     padding:0.2em;
     font-size:0.9em;
@@ -223,12 +223,12 @@ main h3{
     display: grid;
     grid-auto-columns: 1fr;
     justify-content: center;
-    margin:20px;
+    margin:auto;
+    width:98%;
 }
 .img-gallery figure img{
     width:100%;
-    height:200px;
-    
+    height:300px;  
 }
 
 .img-gallery figure{
@@ -245,6 +245,6 @@ img[data-src] {
   }
 img {
   filter: blur(0em);
-  transition: filter 0.5s;
+  transition: filter 2s;
 }
 
