--- a/lesson7/CSS/l7middle.css
+++ b/lesson7/CSS/l7middle.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width:32.5em){
 
     main, footer{
-        /*max-width:1200PX;*/
+        max-width:1200px;
         margin:0 auto;
     }
    
