--- a/lesson8/style/tablestyle.css
+++ b/lesson8/style/tablestyle.css
@@ -23,9 +23,13 @@ td {
 }
 tbody tr:nth-child(1){
     background-color:#628ca6;
-    color: #e7ffed;
+    color: whitesmoke;
     font-weight:bold;   
 }
+tr:nth-child(odd){
+    background-color:#e7ffed;
+}
+tr
 tfoot{
     background-color:#7fb9c2;
     font-size:12px;
