--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -215,6 +215,11 @@ main h3{
     font-size:20px;
 }
 /*----------------------------------------FORM CSS---------------------------------------------------*/
+#storm_heading{
+    color:#22187F;
+    text-align: center;
+    text-shadow: 5px #999;
+}
 form fieldset{
     margin:2rem 0;
     border:1px solid gray;
@@ -243,16 +248,26 @@ form label.top input, form label.top select{
     width:100%;
     max-width:20rem;
 }
+form label.severity{
+    display:flex;
+    color:#ba1309;
+    font-size:smaller;
+    align-items: center;
+}
+#ratingvalue{
+    margin:0 1rem;
+}
 form label.rbtn{
     display:block;
     padding: 0.75rem;
     font-size:0.75rem;
 }
-form label.txtarea{
-    display:block;
-    font-size:0.75rem;
-    
 
+
+textarea{
+    width:100%;
+    height:8em;
+    max-width:70%;
 }
 form input.subBtn{
     background-color:#ba1309;
@@ -262,9 +277,18 @@ form input.subBtn{
     margin-bottom:1.5%;
     width:150px;
 }
+#thanksmsg{
+    font-size:24px;
+    color: #000;
+    text-align: center;
+    width:80%;
+    max-width:1200px;
+    margin:10rem auto;
+}
+
 /*form label.top input:required:valid {
     border-left:4px solid green;
 }
 form label.top input:required:invalid {
-    border-left:4px solid red;
+    background-color:red;
 }*/
