--- a/lesson8/css/storm_small.css
+++ b/lesson8/css/storm_small.css
@@ -218,7 +218,7 @@ main h3{
 #storm_heading{
     color:#22187F;
     text-align: center;
-    text-shadow: 5px #999;
+    text-shadow: 3px 1.5px #999;
 }
 form fieldset{
     margin:2rem 0;
