--- a/lesson11/css/middle.css
+++ b/lesson11/css/middle.css
@@ -39,9 +39,13 @@
 
     .articleimg{
         float:right;
-        margin-top:50px;
-        margin-right:50px;
-        width:350px;
+        margin-top:30px;
+        margin-right:150px;
+        margin-left:10px;
+        margin-bottom: 10px;
+        width:400px;
+        height: 200px;
+        
     }
     .presmap{
         display:block;
