--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -19,6 +19,7 @@ header h1{
     color: #22187F;
     font-size:1.7em;
     margin:-2px;
+    font-weight:bolder;
     
     }
 header{
@@ -49,6 +50,7 @@ nav{
     padding:0;
     list-style:none;
     margin:0;
+    
 }
 .navigationbar li:first-child{
     display:block;
@@ -63,6 +65,9 @@ nav{
     text-align: center;
     text-decoration:none;
     font-size:0.9em;
+    font-weight:bold;
+    border-left:0.5px solid #bbbbbb;
+    
 }
 .responsive li{
     display:block;
@@ -89,10 +94,10 @@ main p{
 }
 
 main h2{text-align:center;
-    font-size: 1.5em;
+    font-size: 2rem;
     color:#22187F;
     padding:25px;
-    font-weight: bold;
+    font-weight: bolder;
     text-shadow: 1px 2px 2px gray;
 }
 main h3{
@@ -351,4 +356,7 @@ form label.top input:required:invalid {
     text-align: center;
     padding: .5rem;
     background-color: #D3D3D3;
+}
+.eventsData h3{
+    font-style:italic;
 }
