--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -199,6 +199,7 @@ main h3{
     max-width:90%;
     height: auto;
     box-shadow:5px 5px 5px #000;
+    margin-top:10px;
 
 }
 .readFullArticle {
@@ -347,9 +348,9 @@ form label.top input:required:invalid {
 }
 .weatherStory{
     text-align:center;
-    padding:.5rem;
+    padding:2rem;
     font-weight:bold;
-    
+
 }
 .townData section:nth-child(1){order:3;}
 .townData section:nth-child(2){order:1;}
