--- a/lesson11/css/gallery-style.css
+++ b/lesson11/css/gallery-style.css
@@ -61,6 +61,8 @@ nav{
     text-align: center;
     text-decoration:none;
     font-size:0.9em;
+    font-weight:bold;
+    border-left:0.5px solid #bbbbbb
 }
 .responsive li{
     display:block;
