--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -368,3 +368,38 @@ form label.top input:required:invalid {
     font-style:italic;
 
 }
+/*------CSS for the gallery page-----*/
+#gallery{
+    text-align:center;
+    color:#22187F;
+    text-shadow:4px #333;
+
+}
+.img-gallery{
+    display: grid;
+    grid-auto-columns: 1fr;
+    justify-content: center;
+    margin:auto;
+    width:98%;
+}
+.img-gallery figure img{
+    width:100%;
+    height:300px;  
+}
+
+.img-gallery figure{
+    margin:0.5em;
+}
+figcaption{
+    font-size:1.2em;
+    line-height:30px;
+    padding-left:10px;
+}
+
+img[data-src] {
+    filter: blur(0.2em);
+  }
+img {
+  filter: blur(0em);
+  transition: filter 2s;
+}
