--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -90,8 +90,7 @@ main {
     margin:0 auto;
 }
 main p{
-    padding:0.2em;
-    font-size:0.9em;
+    padding:0.4rem;
 }
 
 main h2{text-align:center;
@@ -103,6 +102,7 @@ main h2{text-align:center;
 }
 main h3{
     color:#22187F;
+    padding:.5rem;
 }
 
 .container1{
@@ -191,7 +191,7 @@ main h3{
 }
 .article-holder p ol li{
     padding : 5px;
-    font-size: 12px;
+    
     
 }
 .articleimg{
@@ -293,12 +293,14 @@ textarea{
     max-width:70%;
 }
 form input.subBtn{
-    background-color:#ba1309;
+    background-color:#22187F;
     border-radius:4px;
     border:none;
     padding:.5rem;
     margin-bottom:1.5%;
     width:150px;
+    color:whitesmoke;
+    font-weight:500;
 }
 #thanksmsg{
     font-size:16px;
