--- a/lesson13/css/small.css
+++ b/lesson13/css/small.css
@@ -97,13 +97,13 @@ main p{
 
 main h2{text-align:center;
     font-size: 2rem;
-    color:#22187F;
+    color:#Oa1c2f;
     padding:25px;
     font-weight: bolder;
     text-shadow: 1px 2px 2px gray;
 }
 main h3{
-    color:#22187F;
+    color:#Oa1c2f;
     padding:.5rem;
 }
 
