--- a/lesson13/css/small.css
+++ b/lesson13/css/small.css
@@ -115,7 +115,7 @@ main h3{
     height:30%;
 }
 .heroText{
-    position:absolute;
+    position:fixed;
     top:60%;
     left:50%;
     transform:translate(-50%,-50%);
@@ -125,6 +125,7 @@ main h3{
     width:71%;
     padding:20px;
     z-index: 2;
+    overflow: hidden;
     
 }
 .heroText button{
@@ -154,10 +155,59 @@ main h3{
 .summary_info table{
     width:100px;
 }
+.temples{
+    border:1px solid red;
+    height:auto;
+}
 
 
+/*css for the reservation page form*/
 
-
+form fieldset{
+    margin:2rem 0;
+    border:1px solid gray;
+    border-radius:10px;
+    padding: .5rem 2%;
+    background-color:#eee;
+    
+}
+form legend{
+    margin:0 1rem;
+    padding:0 .5rem;
+    color:#22187F;
+}
+form label.top{
+    display:block;
+    font-size:smaller;
+    padding-top:1rem;
+    padding-bottom:1rem;
+}
+form label.side{
+    padding-right:1.5rem;
+}
+form label.top input, form label.top select{
+    display:block;
+    padding: .5rem;
+    border-radius:4px;
+    border:1px solid gray;
+    width:100%;
+    max-width:20rem;
+}
+textarea{
+    width:100%;
+    height:8em;
+    max-width:70%;
+}
+form input.subBtn{
+    background-color:#dea325;
+    border-radius:4px;
+    border:none;
+    padding:.5rem;
+    margin-bottom:1.5%;
+    width:150px;
+    color:whitesmoke;
+    font-weight:500;
+}
 
 /*css for the article and the image
 .article-area{
@@ -227,34 +277,10 @@ main h3{
     text-align: center;
     text-shadow: 3px 1.5px #999;
 }
-form fieldset{
-    margin:2rem 0;
-    border:1px solid gray;
-    border-radius:10px;
-    padding: .5rem 2%;
-    background-color:#eee;
-    
-}
-form legend{
-    margin:0 1rem;
-    padding:0 .5rem;
-    color:#22187F;
-}
-form label.top, form div {
-    color:#ba1309;
-    display:block;
-    font-size:smaller;
-    padding-top:1rem;
-    padding-bottom:1rem;
-}
-form label.top input, form label.top select{
-    display:block;
-    padding: .5rem;
-    border-radius:4px;
-    border:1px solid gray;
-    width:100%;
-    max-width:20rem;
-}
+
+
+
+
 form label.severity{
     display:flex;
     color:#ba1309;
@@ -270,21 +296,7 @@ form label.rbtn{
     font-size:0.75rem;
 }
 
-textarea{
-    width:100%;
-    height:8em;
-    max-width:70%;
-}
-form input.subBtn{
-    background-color:#22187F;
-    border-radius:4px;
-    border:none;
-    padding:.5rem;
-    margin-bottom:1.5%;
-    width:150px;
-    color:whitesmoke;
-    font-weight:500;
-}
+
 #thanksmsg{
     font-size:16px;
     color: #000;
