--- a/lesson13/css/small.css
+++ b/lesson13/css/small.css
@@ -164,7 +164,7 @@ main h3{
 /*css for the reservation page form*/
 
 form fieldset{
-    margin:2rem 0;
+    margin:1.5rem 0;
     border:1px solid gray;
     border-radius:10px;
     padding: .5rem 2%;
@@ -174,7 +174,7 @@ form fieldset{
 form legend{
     margin:0 1rem;
     padding:0 .5rem;
-    color:#22187F;
+    color:#1b498a;
 }
 form label.top{
     display:block;
@@ -198,12 +198,12 @@ textarea{
     height:8em;
     max-width:70%;
 }
-form input.subBtn{
+form input.submitBtn{
     background-color:#dea325;
     border-radius:4px;
     border:none;
-    padding:.5rem;
-    margin-bottom:1.5%;
+    padding:1rem;
+    margin-bottom:1rem;
     width:150px;
     color:whitesmoke;
     font-weight:500;
