--- a/lesson13/css/middle.css
+++ b/lesson13/css/middle.css
@@ -6,12 +6,10 @@
     }
    
     header h1{
-        font-size:2.5em;  
+        font-size:2.5rem;  
     }
     .motto{
-        font-size:1.1em;
-        letter-spacing:2px;
-        margin-left:60px;
+        font-size:1rem;
     }
     header img{
         width:100%;
@@ -19,8 +17,7 @@
     /*css styling of navigation bar for large windows*/
     
     .navigationbar{
-        display:flex;
-        
+        display:flex;    
     }
     .navigationbar li:first-child{
         display:none;
@@ -28,25 +25,13 @@
     .navigationbar li {
         display:block;
         flex:1 1 100%;
+        
     }
     /*css styling for the hero image and weather summary content*/
     .weatherSum{
         width:250px;
     }
-    /*.article-area{
-        height:350px;
-    }*/
-
-    .articleimg{
-        float:right;
-        margin-top:30px;
-        margin-right:150px;
-        margin-left:10px;
-        margin-bottom: 10px;
-        width:400px;
-        height: 200px;
-        
-    }
+    
     .presmap{
         display:block;
         float: left;
