--- a/lesson13/css/small.css
+++ b/lesson13/css/small.css
@@ -52,9 +52,11 @@ nav{
 }
 .navigationbar{
     text-align:center;
-    padding:.3rem;
+    padding:.4rem;
     list-style:none;
     margin:0;
+    overflow:hidden;
+    
     
 }
 .navigationbar li:first-child{
@@ -66,22 +68,43 @@ nav{
 .navigationbar a{
     display: block;
     color:#ffffff;
-    padding:0.5rem;
+    padding:0.6rem;
     text-align: center;
     text-decoration:none;
-    font-size:0.9em;
+    font-size:1rem;
     font-weight:bold;
 }
 .responsive li{
     display:block;
 }
 
-nav a:hover{background-color:#dea325;
+nav a:hover, .dropdown:hover .dropbtn{background-color:#dea325;
     color:white;
     }
 
 nav a.active{background-color:#f41f31;
     color:white;
+}
+li.dropdown{
+    display:inline-block;
+}
+.dropdown_content{
+    display:none;
+    position: absolute;
+    background-color:#1b498a;
+    min-width:150px;
+    z-index:1;
+}
+.dropdown_content a{
+    padding:12px 16px;
+    display:block;
+    text-align:center;
+}
+.dropdown_content a:hover{
+    background-color:#000;
+}
+.dropdown:hover .dropdown_content{
+    display:block;
 }
 
 
@@ -208,6 +231,28 @@ form input.submitBtn{
     color:whitesmoke;
     font-weight:500;
 }
+
+/*css for the services main page*/
+.amenitiesHeading{
+    text-align:center;
+    font-size: 2rem;
+}
+.amenities_img{
+    margin:10px 0;
+}
+.specialServices li {
+    padding:.8rem;
+}
+.freeAmenities li{
+    padding:.8rem;
+}
+
+
+
+
+
+
+
 
 /*css for the article and the image
 .article-area{
