--- a/lesson13/css/middle.css
+++ b/lesson13/css/middle.css
@@ -17,7 +17,9 @@
     /*css styling of navigation bar for large windows*/
     
     .navigationbar{
-        display:flex;    
+        display:flex;
+        float:right;
+        background-color:#1b498a;    
     }
     .navigationbar li:first-child{
         display:none;
@@ -26,11 +28,27 @@
         display:block;
         flex:1 1 100%;    
     }
+    li.dropdown{
+        display:inline-block;
+    }
     
     /* CSS styling for the full time temple missionary page*/
    
     .suites img{
-        display:none;
+        float:right;
+        width:100%;
+        height:300px;
+        margin: 0.5rem;
+    }
+    .suites div{
+        width:400px;
+        text-align:center;
+        margin-top:5rem;
+    }
+    .suites h3{
+        text-align:center;
+        font-size:2rem;
+        
     }
     /*form and image in contact us page must float next to each other*/
    
