--- a/lesson13/css/small.css
+++ b/lesson13/css/small.css
@@ -30,7 +30,7 @@ header{
     justify-content:center;
 }
 /* styling the logo image*/
-header img{width:100px;
+header img{width:150px;
     height:auto;
 }
 .headings{display:flex;
@@ -47,7 +47,6 @@ header img{width:100px;
 nav{
     margin:0 auto;
     background-color:#1b498a;
-    border:0.5px solid #bbbbbb;
     
 }
 .navigationbar{
@@ -86,7 +85,7 @@ nav a.active{background-color:#f41f31;
     color:white;
 }
 li.dropdown{
-    display:inline-block;
+    display:none;
 }
 .dropdown_content{
     display:none;
@@ -95,6 +94,7 @@ li.dropdown{
     min-width:150px;
     z-index:1;
 }
+
 .dropdown_content a{
     padding:12px 16px;
     display:block;
@@ -182,7 +182,10 @@ main h3{
     border:1px solid red;
     height:auto;
 }
-
+/*css for the temple page*/
+.temples{
+    height:400px;
+}
 
 /*css for the reservation page form*/
 
@@ -285,12 +288,19 @@ form input.submitBtn{
     justify-content: center;
     margin:.5rem auto;
     width:90%;
-    border:1px solid red;
 }
 .suites img{
     width:100%;
     max-width:400px;
     margin:.5rem auto;
+    border-radius: .5rem;
+}
+.missionForm{
+    margin-top:2rem;
+    border:1px dashed red;
+    margin-bottom:2rem;
+    padding-left:2rem;
+    background-color:#f2f2f2;
 }
 img[data-src] {
     filter: blur(0.2em);
@@ -317,6 +327,10 @@ img {
     font-size:3rem;
 
 }
+.physicalAdress{
+    display:block-inline;
+}
+
 
 
 
